Animation timers have been moved to the base class. The base class is now InstrumentBase

--- a/FlightInstruments/FlightInstruments.csproj
+++ b/FlightInstruments/FlightInstruments.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="InstrumentBase.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
